# snakemake-storage-plugin-zenodo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_zenodo/: __init__.py  helper.py
tests/: tests.py
