[tool.poetry]
name = "snakemake-storage-plugin-zenodo"
version = "0.1.3"
description = "A Snakemake storage plugin for reading from and writing to zenodo.org"
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-storage-plugin-zenodo"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/zenodo.html"
keywords = ["snakemake", "zenodo", "storage", "plugin"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.4"
snakemake-interface-storage-plugins = "^3.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
